Fix illustration size on small screens

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -25,3 +25,6 @@ footer {
   margin-right: auto;
   margin-bottom: 32px;
 }
+.main_illustration {
+  max-width: 80%;
+}
